<resources>
    <string name="app_name">Quiz App</string>

    <string name="answer_the_following">Answer The Following Questions</string>

    <string name="Q_1">Q1 - Java is a ........... language.</string>
    <string name="Q_1_A">weakly typed</string>
    <string name="Q_1_B_Answer">strogly typed</string>
    <string name="Q_1_C">moderate typed</string>
    <string name="Q_1_D">None of these</string>

    <string name="Q_2">Q2 - Which of the following automatic type conversion will be possible?</string>
    <string name="Q_2_A">short to int</string>
    <string name="Q_2_B">byte to int</string>
    <string name="Q_2_C_Answer">int to long</string>
    <string name="Q_2_D">long to int</string>

    <string name="Q_3">Q3 - Which of the following are access modifiers?</string>
    <string name="Q_3_A">int</string>
    <string name="Q_3_B_Answer">private</string>
    <string name="Q_3_C">long</string>
    <string name="Q_3_D_Answer">public</string>

    <string name="Q_4">Q4 - The extension of JAVA class is </string>
    <string name="Q_4_Answer">.java</string>

    <string name="submit">Submit &amp; Grade Me</string>

    <string name="degree">Your Degree Is : No Grade Yet</string>

</resources>
